# gsoc2025-triplestores

./: README.md  alternatives.md
triplestore/: pyproject.toml
triplestore/src/triplestore/: base.py  registration.py  utils.py  utils_geo.py
triplestore/src/triplestore/backends/: allegrograph.py  blazegraph.py  graphdb.py  jena.py  jena_utils.py  oxigraph.py  qlever.py  rdf4j.py  virtuoso.py
triplestore/tests/: test_all_backends.py  test_allegrograph.py  test_blazegraph.py  test_graphdb.py  test_graphdb_offline.py  test_jena.py  test_oxigraph.py  test_qlever.py  test_rdf4j.py  test_virtuoso.py
triplestore/tests_GeoSPARQL/: test_all_backends.py  test_allegrograph.py  test_graphdb.py  test_jena.py  test_qlever.py  test_rdf4j.py  test_virtuoso.py
