[project]
name = "triplestore"
version = "0.1.0"
description = "A unified abstraction layer for interacting with multiple RDF triplestore backends."
readme = "README.md"
authors = [
    { name = "Alexios Zavras (zvr)", email = "zvr+git@zvr.gr" },
    { name = "Maira Papadopoulou", email = "" },
]

requires-python = ">=3.10"

dependencies = [

]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
allegrograph = [
    "agraph-python>=104.3.0",
    "requests>=2.32.4",
]

blazegraph = ["requests>=2.32.4"]

graphdb = ["requests>=2.32.4"]

jena =[
    "psutil>=7.0.0",
    "requests>=2.32.4"
]

oxigraph = ["pyoxigraph>=0.4.11"]

qlever = ["requests>=2.32.4"]

rdf4j = ["requests>=2.32.4"]

all = [
    "agraph-python>=104.3.0",
    "psutil>=7.0.0",
    "pyoxigraph>=0.4.11",
    "requests>=2.32.4",
]

dev = [
    "pytest",
    "ruff",
    "mypy",
    "build"
]

[project.entry-points."triplestore.backends"]
allegrograph = "triplestore.backends.allegrograph:AllegroGraph"
blazegraph   = "triplestore.backends.blazegraph:Blazegraph"
graphdb      = "triplestore.backends.graphdb:GraphDB"
jena         = "triplestore.backends.jena:Jena"
oxigraph     = "triplestore.backends.oxigraph:Oxigraph"
qlever       = "triplestore.backends.qlever:QLever"
rdf4j        = "triplestore.backends.rdf4j:RDF4J"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
fix = false
indent-width = 4
line-length = 150
# output-format = "full"
output-format = "grouped"
preview = true
required-version = ">=0.9"
show-fixes = true

[tool.ruff.format]
docstring-code-format = false
indent-style = "space"
line-ending = "native"
preview = true
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
fixable = ["ALL"]
ignore = [ "AIR", "ANN", "D", "NPY", "PD", "COM812", "RUF012" ]
preview = true
select = [ "ALL" ]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"bench/*.py" = [ "PLR2004", "PLW0603", "T201" ]
"bench/benchmark.py" = [ "INP001", "S311", "T201" ]
"demo/*.py" = [ "INP001", "T201" ]
"tests/*.py" = [ "INP001", "PLR2004", "S101" ]

[tool.ruff.lint.isort]
case-sensitive = true
force-sort-within-sections = false
from-first = false
lines-between-types = 0
split-on-trailing-comma = false

